# TheWiz

./: .env.example  .gitignore  README.md  mcp.example.json  memory.md  project_objective.md  pyproject.toml
config/: btc_doge_multi_timeframe.yaml  candidate_pairs_multi_timeframe.yaml  entry_exit_style_options.json  research.yaml
docs/: api_first_research_flow.md  apify_integration.md  architecture.md  crypto_wizards_api_reference.md  crypto_wizards_endpoint_catalog.csv  crypto_wizards_fixture_field_dictionary.csv  crypto_wizards_live_field_dictionary.csv  crypto_wizards_pair_detail_extraction.md  dashboard_field_dictionary.md  dydx_v4_reference.md  field_dictionary.csv  formula_dictionary.md  project_full_handoff_summary.md  quant_brain.md  strategy_registry.csv  tradestaq_mcp_setup.md  workspace_alignment_plan.md
outputs/: continuation-checkpoint-2026-06-20-c.md  missing_untested_pairs_local.csv  next_unbuilt_pair_candidates_min1000.csv  p2-resumed-diagnostic-2026-06-20.md
reports/: 1_dydx_long_history_coverage.csv  ablation_report.csv  acceptance_report.csv  btc_link_long_hist_cov.csv  btc_sol_dydx_long_history_coverage.csv  crypto_wizards_diagnostic.csv  crypto_wizards_live_coverage.csv  crypto_wizards_scanner_rows.csv  dydx_execution_checklist.csv  dydx_live_market_counts.csv  dydx_live_market_selector.csv  dydx_live_market_selector_custom.csv  dydx_long_history_fetch.csv  dydx_long_history_plan.csv  dydx_pair_expansion_plan.csv  dydx_pair_expansion_plan_hunt.csv  dydx_pair_expansion_run.csv  dydx_two_leg_data_requests.csv  eth_link_long_hist_cov.csv  (+48 more)
(+1330 files in other folders)
