[project]
name = "quantized-stat-arb-platform"
version = "0.1.0"
description = "Research-first statistical arbitrage platform for crypto pair trading."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pydantic>=2.6",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "requests>=2.31",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dydx = [
  "dydx-v4-client>=1.1.5",
]
rl = [
  "gymnasium>=0.29",
  "stable-baselines3>=2.3",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
